[gd_scene load_steps=3 format=2]

[ext_resource path="res://SelectorPopup.gd" type="Script" id=1]
[ext_resource path="res://SelectionUI.gd" type="Script" id=2]

[node name="SelectionUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1" type="VBoxContainer" parent="Container"]
margin_right = 173.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="P1 Title" type="Label" parent="Container/P1"]
margin_right = 173.0
margin_bottom = 14.0
text = "Player 1"
align = 1

[node name="P1Folder" type="HBoxContainer" parent="Container/P1"]
margin_top = 34.0
margin_right = 173.0
margin_bottom = 58.0

[node name="P1FolderValue" type="LineEdit" parent="Container/P1/P1Folder"]
margin_right = 145.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false

[node name="P1FolderButton" type="Button" parent="Container/P1/P1Folder"]
margin_left = 149.0
margin_right = 173.0
margin_bottom = 24.0
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1StartButton" type="Button" parent="Container/P1"]
margin_top = 78.0
margin_right = 173.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1StopButton" type="Button" parent="Container/P1"]
margin_top = 229.0
margin_right = 173.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Stop"

[node name="P2" type="VBoxContainer" parent="Container"]
margin_left = 193.0
margin_right = 366.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="P2 Title" type="Label" parent="Container/P2"]
margin_right = 173.0
margin_bottom = 14.0
text = "Player 2"
align = 1

[node name="P2Folder" type="HBoxContainer" parent="Container/P2"]
margin_top = 34.0
margin_right = 173.0
margin_bottom = 58.0

[node name="P2FolderValue" type="LineEdit" parent="Container/P2/P2Folder"]
margin_right = 145.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false

[node name="P2FolderButton" type="Button" parent="Container/P2/P2Folder"]
margin_left = 149.0
margin_right = 173.0
margin_bottom = 24.0
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2StartButton" type="Button" parent="Container/P2"]
margin_top = 78.0
margin_right = 173.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2StopButton" type="Button" parent="Container/P2"]
margin_top = 229.0
margin_right = 173.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Stop"

[node name="Border" type="VBoxContainer" parent="Container"]
margin_left = 386.0
margin_right = 560.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Border Title" type="Label" parent="Container/Border"]
margin_right = 174.0
margin_bottom = 14.0
text = "Border"
align = 1

[node name="CenterContainer" type="GridContainer" parent="Container/Border"]
margin_top = 34.0
margin_right = 174.0
margin_bottom = 165.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BorderPreview" type="TextureRect" parent="Container/Border/CenterContainer"]
margin_right = 174.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 1

[node name="BorderFile" type="HBoxContainer" parent="Container/Border"]
margin_top = 185.0
margin_right = 174.0
margin_bottom = 209.0

[node name="BorderFileValue" type="LineEdit" parent="Container/Border/BorderFile"]
margin_right = 146.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false

[node name="BorderSelectButton" type="Button" parent="Container/Border/BorderFile"]
margin_left = 150.0
margin_right = 174.0
margin_bottom = 24.0
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartBorderButton" type="Button" parent="Container/Border"]
margin_top = 229.0
margin_right = 174.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Launch Border"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderOpenDialog" type="FileDialog" parent="."]
margin_left = 115.278
margin_top = 50.8809
margin_right = 499.278
margin_bottom = 346.881
window_title = "Open a File"
resizable = true
dialog_text = "Select Border"
dialog_hide_on_ok = true
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/home/sam/GitHub/sinden-overlay"
current_path = "/home/sam/GitHub/sinden-overlay/"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1FolderOpenDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.049
margin_top = -149.636
margin_right = 223.951
margin_bottom = 167.364
window_title = "Open a Directory"
resizable = true
dialog_text = "Select Player 1 Executables Folder"
dialog_hide_on_ok = true
mode = 2
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/home/sam/GitHub/sinden-overlay"
current_path = "/home/sam/GitHub/sinden-overlay/"
script = ExtResource( 1 )

[node name="P2FolderOpenDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.049
margin_top = -149.636
margin_right = 223.951
margin_bottom = 167.364
window_title = "Open a Directory"
resizable = true
dialog_text = "Select Player 2 Executables Folder"
dialog_hide_on_ok = true
mode = 2
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/home/sam/GitHub/sinden-overlay"
current_path = "/home/sam/GitHub/sinden-overlay/"
script = ExtResource( 1 )

[node name="MessagePopUp" type="AcceptDialog" parent="."]
margin_left = 146.946
margin_top = 154.584
margin_right = 403.946
margin_bottom = 271.584
dialog_autowrap = true

[connection signal="pressed" from="Container/P1/P1Folder/P1FolderButton" to="P1FolderOpenDialog" method="_on_Button_pressed"]
[connection signal="pressed" from="Container/P1/P1StartButton" to="." method="_on_P1StartButton_pressed"]
[connection signal="pressed" from="Container/P1/P1StopButton" to="." method="_on_P1StopButton_pressed"]
[connection signal="pressed" from="Container/P2/P2Folder/P2FolderButton" to="P2FolderOpenDialog" method="_on_Button_pressed"]
[connection signal="pressed" from="Container/P2/P2StartButton" to="." method="_on_P2StartButton_pressed"]
[connection signal="pressed" from="Container/P2/P2StopButton" to="." method="_on_P2StopButton_pressed"]
[connection signal="pressed" from="Container/Border/BorderFile/BorderSelectButton" to="BorderOpenDialog" method="_on_Button_pressed"]
[connection signal="pressed" from="Container/Border/StartBorderButton" to="." method="_start_border"]
[connection signal="file_selected" from="BorderOpenDialog" to="." method="_on_border_selected"]
[connection signal="dir_selected" from="P1FolderOpenDialog" to="." method="_on_P1_dir_selected"]
[connection signal="dir_selected" from="P2FolderOpenDialog" to="." method="_on_P2_dir_selected"]
